--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                     <a href="#">Hugo Boss</a>
                   </h3>
 
-                  <a href="#" class="btn-text hover-underline label-2">Bottled Elexir</a>
+                  <a href="#" class="btn-text hover-underline label-2">Bottled Elixir</a>
 
                 </div>
 
