--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     - favicon
   -->
   <link rel="shortcut icon" href="./assets/images/gelogoblue.png" type="image/svg+xml">
+  <link rel="icon" href="./assets/images/gelogo.png" type="image/svg+xml">
+  
+
 
   <!-- 
     - google font link
@@ -116,7 +119,7 @@
 
       <a href="#" class="logo" style="display: flex; align-items: center;">
         <img src="./assets/images/getwhite.png" width="70" height="10" alt="grand empire perfumes">
-        <h1 style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: 400;">Grand Empire Perfumes
+        <h1 style="font-family:'Forum', 'DM Sans', Arial, sans-serif; font-weight: 500;">Grand Empire Perfumes LLC
         </h1>
       </a>
 
@@ -538,10 +541,10 @@
           <div class="about-content">
 
             <p class="label-2 section-subtitle" id="about-label">Our Story</p>
+<h1 style="font-family:'Forum', 'DM Sans', Arial, sans-serif; font-weight: 500;"></h1>
+            <h5 class="headline-2 section-title" style="font-family:'Forum', 'DM Sans', Arial, sans-serif; font-weight: 500;">Grand Empire Perfumes LLC</h5>
 
-            <h5 class="headline-1 section-title">Grand Empire Perfumes</h5>
-
-            <p class="section-text">
+            <p class="section-text" style="text-align: justify;">
               We are a leading and trusted name in the perfume trading industry. With nearly two decades of expertise +
               strong family-owned business background, we specialize in sourcing and supplying genuine branded perfumes
               & niche fragrances to clients across the region and beyond. Our commitment to quality, authenticity, and
