--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   <!-- <link rel="shortcut icon" href="./assets/images/gelogoblue.png" type="image/svg+xml">
   <link rel="icon" href="./assets/images/gelogo.png" type="image/svg+xml"> -->
 
-  <link rel="icon" href="/assets/images/favicon.ico" sizes="32x32" type="image/x-icon" />
-  <link rel="icon" href="/assets/images/favicon.ico" type="image/svg+xml" />
-  <link rel="apple-touch-icon" href="/assets/images/favicon.ico" sizes="180x180" />
+  <link rel="icon" href="/assets/images/favicon.png" type="image/x-icon" />
+  <link rel="icon" href="/assets/images/favicon.png" type="image/svg+xml" />
+  <link rel="apple-touch-icon" href="/assets/images/favicon.png" sizes="180x180" />
 
 
 
